# PseudoFinancial-Data

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: deploy.yaml.disabled
app/web/: factor_model  heston_model  main.py
app/web/static/: index.html
